--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+
     <meta charset="UTF-8">
     <title>Title what</title>
 test2
@@ -12,4 +13,5 @@ test1
 test1
 test1
 </body>
+<footer></footer>
 </html>
